unb-fs/stylesheets/_footer.scss
#theme-footer {
  background: $footer-background;
  width: auto;
  margin: -5px 0px;
  position: relative;
  z-index: 10;
  overflow: hidden;

  #footer-content {
    background: $footer-background;
    margin: -5px auto;
    padding: 30px 0px 20px;
    width: 1000px;
    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.3);
    -moz-box-shadow: 0 0 10px rgba(0,0,0,0.3);
    box-shadow: none;
    font-size: 14px;

    > ul {
      margin: 0px;
      padding: 0px;
      list-style: none;

      > li {
        margin: 0px;
        padding: 0px 52px;
        display: block;
        float: left;
        text-align: right;

        .footer-division-title {
          text-transform: uppercase;
        }

        a {
          color: #707070;
        }

        ul {
          padding: 15px 0px 5px;
          list-style: none;

          > li {
            float: none;
            display: block;
            padding: 5px 0px;
          }
        }

        &#empty-column {
          height: 204px;
          padding-right: 4px;
          border-right: none;
        }

        &#util-links {
          padding-right: 0;
        }

        &#unb-logo {
          padding-left: 0;
        }

        #unb span {
          background: url(images/logo-unb-footer.png) top left no-repeat;
          color: transparent;
          display: block;
          height: 100px;
          width: 100px;
          opacity: 0.7;
          transition: opacity 0.3s ease-in-out;
        }

        #unb span:hover {
          opacity: 1;
        }
      }
    }

    a {
      color: #003366;

      &:hover {
        text-decoration: none;
        color: #222222;
      }
    }

    #footer-cc {
      display: block;
      width: 24px;
      height: 24px;
      background: url(images/cc.png);
      float:left;
      margin-right: 5px;

      span {
        display: none;
      }
    }

    #powered-by-noosfero {
      font-size: 11px;
      text-align: center;
    }

    #language-chooser {
      clear: both;
      margin-top: 1.5em;
      display: none;
    }

    #license-on-footer {
      width: 1000px;
      padding: 240px 0 0;
      font-size: 11px;
      text-align: left;
      color: #003366;
    }
  }
}

#institutional-link,
#research-links,
#internal-links {
  border-right: 2px #cccccc solid;
  height: 204px;
}

